2001-01-16  Arturo Espinosa <arturo@ximian.com>

	* guess_system.sh: stolen from autoconf, a script to tell the
	system the backends are running on.
	* Makefile.am: install guess_system.sh where be.pl goes.

2001-01-16  Tambet Ingo  <tambet@ximian.com>

	* Added debugging support.
	* Got rid of hardcoded tool locations, made it using be_locate_tool.
	* Switched hardcoded /proc/meminfo to variable.
	* Get all sizes in format %.1f to unify with frontend.

2001-01-16  Chema Celorio  <chema@celorio.com>

	* time-conf.in (get_zone): when scanning for timezones
	only do a system "diff ..." if the file size matches the
	timezone we are looking for. This reduces loading time.

	* Added ChangeLog 
	
